version/0.18/_sources/api/solver/_autosummary/settings/aeromechanics.rst.txt
:orphan:

.. _aeromechanics:

aeromechanics
=============

.. autoclass:: ansys.fluent.core.solver.settings_232.aeromechanics.aeromechanics
    :show-inheritance:

.. rubric:: Methods

========================================   ==============================

Method                                                            Summary

========================================   ==============================
:ref:`list <list>`                                        'list' command.

:ref:`list_properties <list_properties>`       'list_properties' command.

:ref:`duplicate <duplicate>`                         'duplicate' command.

========================================   ==============================

.. rubric:: Named object type

:ref:`aeromechanics_child <aeromechanics_child>`


.. rubric:: Included in:

==============================================   ===============================

Parent                                                                   Summary

==============================================   ===============================
:ref:`report_definitions <report_definitions>`       'report_definitions' child.

==============================================   ===============================

