version/0.20/_sources/api/solver/_autosummary/settings/aeromechanics.rst.txt
:orphan:

.. _aeromechanics:

aeromechanics
=============

.. autoclass:: ansys.fluent.core.solver.settings_241.aeromechanics.aeromechanics
    :show-inheritance:

.. rubric:: Methods

==========================================   =========================================

Method                                                                         Summary

==========================================   =========================================
:ref:`delete <delete_1>`                                      Delete selected objects.

:ref:`list <list>`                                      List the names of the objects.

:ref:`list_properties <list_properties_1>`       List active properties of the object.

:ref:`make_a_copy <make_a_copy>`                          Create a copy of the object.

==========================================   =========================================

.. rubric:: Named object type

:ref:`aeromechanics_child <aeromechanics_child>`


.. rubric:: Included in:

==============================================   ===============================

Parent                                                                   Summary

==============================================   ===============================
:ref:`report_definitions <report_definitions>`       'report_definitions' child.

==============================================   ===============================

